[gd_scene load_steps=4 format=3 uid="uid://cemay1pov5rbh"]

[ext_resource type="Script" uid="uid://cpk3gmcgngu63" path="res://scenes/main/node_3d.gd" id="1_u5lga"]
[ext_resource type="PackedScene" uid="uid://chrbwl4afpb3c" path="res://scenes/ui_info_panel.tscn" id="2_vkjps"]
[ext_resource type="PackedScene" uid="uid://c8a3wer31o8i" path="res://scenes/model_control_panel.tscn" id="3_x84oi"]

[node name="MainScene" type="Node3D"]
script = ExtResource("1_u5lga")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 5, 3, 5)
current = true
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0.0160422, 19.8468, -0.0376883)
shadow_enabled = true

[node name="BrainModel" type="Node3D" parent="."]
transform = Transform3D(21.726, 0, 0, 0, 21.726, 0, 0, 0, 21.726, 0, 0, 0)

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="ObjectNameLabel" type="Label" parent="UI_Layer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Selected: None"
horizontal_alignment = 1

[node name="StructureInfoPanel" parent="UI_Layer" instance=ExtResource("2_vkjps")]
anchors_preset = 6
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 0.0
offset_bottom = 250.0
grow_vertical = 2

[node name="ModelControlPanel" parent="UI_Layer" instance=ExtResource("3_x84oi")]

[connection signal="visibility_changed" from="." to="UI_Layer/StructureInfoPanel" method="_on_main_scene_visibility_changed"]
[connection signal="script_changed" from="BrainModel" to="." method="_on_brain_model_script_changed"]
